--- a/data/notice/1.html
+++ b/data/notice/1.html
@@ -1,2 +1,2 @@
-<p>학교 주변에 <b>멧돼지가</b> 출현한다고 합니다. 조심합시다!</p>
-<p>멧돼지 눈을 똑바로 쳐다보면서 멀어지라고 하네요.</p>
+<p>드디어 계고양이가 완성되었습니다! 와 짝짝짝</p>
+<p>급식 앱들 중 유일하게 저녁밥이 보이는 갓-고양이를 어서 친구들에게 알려야겠는걸??</p>
